src/objects/Time_Donation_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Date_Time_Donated__c</fullName>
        <inlineHelpText>Enter the date when the time was donated</inlineHelpText>
        <label>Date Time Donated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TIme_Donation__c</fullName>
        <label>Time Donation</label>
        <referenceTo>Time_Donation__c</referenceTo>
        <relationshipLabel>Time Donation Entries</relationshipLabel>
        <relationshipName>Time_Donation_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time_Donated_in_Hours__c</fullName>
        <inlineHelpText>Enter time donated in whole hours (round-up to nearest hours donated)</inlineHelpText>
        <label>Time Donated in Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Time Donation Entry</label>
    <nameField>
        <displayFormat>TIME ENTRY - {00000}</displayFormat>
        <label>Time Donation Entries Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Donation Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>